--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               id="n-donate-amount"
               class="input w-full px-4"
               placeholder="Write Donation Amount"
-              type="text"
+              type="number"
             />
             <button
               id="btn-donate-noakhali"
@@ -151,7 +151,7 @@
               id="feni-donate-amount"
               class="input w-full px-4"
               placeholder="Write Donation Amount"
-              type="text"
+              type="number"
             />
             <button
               id="btn-donate-feni"
@@ -193,7 +193,7 @@
               id="quata-movement-donate-amount"
               class="input w-full px-4"
               placeholder="Write Donation Amount"
-              type="text"
+              type="number"
             />
             <button
               id="btn-donate-quata-movement"
@@ -221,7 +221,7 @@
         </dialog>
       </section>
       <!-- history section -->
-      <section id="history-container" class="hidden space-y-6"></section>
+      <section id="history-container" class="hidden space-y-6 mb-12"></section>
     </main>
     <footer class="bg-background h-28 w-full"></footer>
     <script src="./js/utility.js"></script>
