--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@
           <p>Selecting DOM (Document Object Model) elements is a fundamental aspect of web development with JavaScript. It allows developers to interact with and manipulate elements on a webpage dynamically.
             <br>
             Below are the approaches to select DOM elements in JavaScript:
-            <ul class="list-disc">
+            <ul class="list-disc space-y-1">
               <li>Using getElementById</li>
               <li>Using getElementsByClassName</li>
               <li>Using getElementsByTagName</li>
@@ -105,15 +105,15 @@
           <p>Event delegation is a design pattern in JavaScript used to efficiently manage and handle events on multiple child elements by attaching a single event listener to a common ancestor element.</p>
         </div>
       </div>
-      <div class="collapse collapse-arrow bg-base-200">
+      <div class="collapse collapse-arrow bg-base-200 p-6 ">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">
           How do you manipulate an element's attributes and styles using the
           DOM?
         </div>
-        <div class="collapse-content">
+        <div class="collapse-content space-y-2">
           <p>There are multiple methods available in DOM to select the HTML elements and manipulate them as listed below: 
-            <ul>
+            <ul class="list-disc space-y-1 ">
               <li>querySelector() method: The querySelector( ) method is used to select the first element that matches the specified selector provided as an argument.</li>
               <li>getElementById( ) method: The getElementId() method is used to select a single element using its Id</li>
               <li>getElementByClassName( ): The getElementsByClassName() method in JavaScript is used to select elements in the HTML document that have a specific class name.
